--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/EF-logo2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?
 family=Fraunces:ital,wght@0,100..900;1,100..900
@@ -20,7 +20,7 @@ family=Fraunces:ital,wght@0,100..900;1,100..900
 />
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
-    <title>portfolio26</title>
+    <title>EF Portfolio 2026</title>
   </head>
   <body>
     <div id="root"></div>
